Started work on gamescene background

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </head>
 
   <body>
+    <script src="Classes/GrapeVine.js"></script>
+    <script src="Classes/GameManager.js"></script>
+    <script src="Classes/Utility.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
