--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   </head>
 
   <body>
+    <script src="Classes/Cloud.js"></script>
     <script src="Classes/GrapeVine.js"></script>
+    <script src="Classes/Grass.js"></script>
     <script src="Classes/GameManager.js"></script>
     <script src="Classes/Utility.js"></script>
     <script src="sketch.js"></script>
