--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <script src="Classes/Cloud.js"></script>
     <script src="Classes/GrapeVine.js"></script>
     <script src="Classes/Grass.js"></script>
+    <script src="Classes/Player.js"></script>
+    <script src="Classes/FallingObject.js"></script>
+    <script src="Classes/FallingObjectManager.js"></script>
     <script src="Classes/GameManager.js"></script>
     <script src="Classes/Utility.js"></script>
     <script src="sketch.js"></script>
